# misc

./: README.md
.buildkite/: pipeline.yaml
.devcontainer/default/: devcontainer.json
.devcontainer/docker/: devcontainer.json
.devcontainer/rust/: Dockerfile  devcontainer.json
.devcontainer/tauri/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: devenv.yml  unifi-network.yml  wkfl-app.yml  wkfl-release.yml  wkfl.yml
aoc_23/: .gitignore
aoc_23/src/: day1.rs  day2.rs  day3.rs  day4.rs  main.rs
devenv/: Dockerfile  README.md  entrypoint.sh  justfile
mimir_utils/: go.mod  go.sum
mimir_utils/internal/cli/: main.go  (+2 more)
models/: L_cover_with_screws.scad  L_cover_with_screws.stl  climbing_wall_drill_jig.scad  climbing_wall_drill_jig.stl  drawer_foot_pull.scad  drawer_foot_pull.stl  drilling_vacuum_attachment_adapter.scad  drilling_vacuum_attachment_adapter.stl  justfile  magnet_holder.scad  magnet_holder.stl  pick_storage_box.scad  pick_storage_box.stl  raised_corner_plate.scad  raised_corner_plate.stl
piframe/: index.html  package.json  pnpm-lock.yaml
piframe/src/: main.ts  styles.css
piframe/src-tauri/: Cargo.toml  tauri.conf.json
unifi-network/: Dockerfile  entrypoint.sh
wkfl/: .gitignore  .wkfl.toml  Cargo.toml
wkfl-app/: package.json  pnpm-lock.yaml
wkfl-app/src-tauri/: Cargo.toml  tauri.conf.json
wkfl/.claude/: settings.local.json
wkfl/docs/: configuration.md  why.md
wkfl/shell_wrappers/: wkfl.fish
wkfl/src/: actions.rs  clients.rs  config.rs  git.rs  github.rs  gql_queries.rs  jira.rs  llm.rs  main.rs  mcp.rs  notes.rs  prompts.rs  repositories.rs  server.rs  shell_actions.rs  todo.rs  utils.rs
wkfl/src/clients/: github.rs  jira.rs
wkfl/src/gql_queries/: common.rs  pr_details.graphql  pr_details.rs  pr_details_comments.graphql  pr_details_commits.graphql  pr_details_files.graphql  pr_details_review_requests.graphql  pr_details_review_thread_comments.graphql  pr_details_review_threads.graphql  pr_details_reviews.graphql  pr_details_status_checks.graphql  prs_to_review.graphql  prs_to_review.rs  review_comments.graphql  review_comments.rs
wkfl/src/jira/: adf.rs
wkfl/src/llm/: anthropic.rs  ollama.rs  perplexity.rs  vertex_ai.rs
(+5 files in other folders)
