[package]
name = "wkfl"
version = "0.1.4"
description = "Tool to assist and automate my workflow"
edition = "2021"
publish = false

[dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"] }
base64 = "0.22.1"
clap = { version = "4.5.50", features = ["derive"] }
clap_complete = "4.5.59"
crossterm = "0.29.0"
env_logger = "0.11.6"
fuzzy-matcher = "0.3.7"
git2 = "0.20.0"
home = "0.5.11"
log = "0.4.28"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
time = { version = "0.3.44", features = ["formatting", "macros", "parsing"] }
toml = "0.9.8"
ureq = { version = "2.12.1", features = ["json", "gzip"] }
url = "2.5.2"
