[package]
name = "wkfl"
version = "0.1.4"
description = "Tool to assist and automate my workflow"
edition = "2021"
publish = false

[dependencies]
anyhow = { version = "1.0.102", features = ["backtrace"] }
base64 = "0.22.1"
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.3"
crossterm = "0.29.0"
env_logger = "0.11.10"
fuzzy-matcher = "0.3.7"
git2 = "0.20.0"
home = "0.5.12"
log = "0.4.29"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
time = { version = "0.3.47", features = ["formatting", "macros", "parsing"] }
toml = "1.1.2"
ureq = { version = "2.12.1", features = ["json", "gzip"] }
url = "2.5.2"

[dev-dependencies]
tempfile = "3.27.0"
